# hairdemo

./: CMakeLists.txt  LICENSE  README.md
asset/lionking/: lionking.ind
asset/lionking/lionking/: lionsmooth.mtl
asset/train/: test.ind  train.ind
shader/: common.glsl  filter.glsl  hair_common.glsl  hair_depth_k.glsl  hair_detail.glsl  hair_ppll_resolve.glsl  hair_ppll_store.glsl  hair_renderer.glsl  hair_renderer_reduce_depth.glsl  hair_shadow_depth_k.glsl  hair_write_depth_k.glsl  mesh_renderer.glsl  simple_mesh.glsl
src/: app_settings.cc  app_settings.h  calc3.h  hair_renderer.cc  hair_renderer.h  main.cc  mesh_renderer.h  render.h  tiny_obj_loader.h  xy_calc.h  xy_ext.h  xy_glfw.cc  xy_glfw.h  xy_opengl.cc  xy_opengl.h  xy_rt.h
